Change in sections, subsections and description using SM FJC feedback

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,8 +1,8 @@
 % Appendix A
 
 \chapter{Tables }
-\label{app:SEDdata}
-\lhead{Appendix A. \emph{Tables of SED data}}
+\label{app:tables}
+\lhead{Appendix A. \emph{Tables of data}}
 
 Along this appendix a table is presented 
 
