--- a/Thesis.tex
+++ b/Thesis.tex
@@ -104,7 +104,7 @@
 
 % Begin the Dedication page
 \pagestyle{empty}  % Page style needs to be empty for this page
-\dedicatory{A mi familia y amigos\ldots}
+\dedicatory{La dedicatoria apropiada.\ldots}
 
 \addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
 %% ----------------------------------------------------------------
@@ -144,19 +144,17 @@
 \null\vfill
 % Now comes the "Funny Quote", written in italics
 \begin{flushright}
-\textit{``They both savoured the strange warm glow of \\
-being much more ignorant than ordinary people, \\
-who were only ignorant of ordinary things.''}\par
+\textit{``I am your father.''}\par
 \smallskip
-Discworld scientist at work \\
-(Terry Pratchett, Equal Rites)
+Lord Voldemort \\
+(John Ronald Reuel Tolkien, Game of Thrones)
 \end{flushright}
 \bigskip
 \begin{flushright}
-\textit{``In order to make an apple pie from scratch, \\
-you must first create the Universe.''}\par
+\textit{``The problem with quotes found on internet \\
+is that they are often not true.''}\par
 \smallskip
-Carl Sagan
+Abraham Lincoln
 \end{flushright}s
 
 \vfill\vfill\vfill\vfill\vfill\vfill\null
@@ -205,14 +203,14 @@ Carl Sagan
 
 \input{./Chapter1_intro/chapter1.tex} % Introduction
 
-\input{./Chapter2_data/chapter2.tex} % Description of the HLIRG sample
+\input{./Chapter2_data/chapter2.tex} % Instrumentation and data origin
 
-\input{./Chapter3_methods/chapter3.tex} % X-ray XMM study
+\input{./Chapter3_methods/chapter3.tex} % The BUXS sample and methods
 
 
-\input{./Chapter4_xsh/chapter4.tex} % Study of the Spectral Energy Distributions
+\input{./Chapter4_xsh/chapter4.tex} % Xshooter 2 objectss
 
-\input{./Chapter5_buxs/chapter5.tex} % MIR Spitzer study
+\input{./Chapter5_buxs/chapter5.tex} % Type-1 BUXS sample
 
 \input{./Chapter6_conc/chapter6.tex} % Conclusions and future work
 
