--- a/resumen.tex
+++ b/resumen.tex
@@ -4,27 +4,27 @@
 \hyphenation{mo-de-ra-da-men-te re-a-li-dad mo-de-ra-do}
 
 \section*{Objetivos de la Investigación}
-Ehhh....
+
+Relleno.
 
 \section*{Planteamiento y metodología}
-Ehhh....
 
-
+Relleno.
 
 
 \section*{Aportaciones originales}
-Ehhh....
+
+Relleno.
 
 
 \section*{Conclusiones}
 
-Ehhh....
-
-
+Relleno.
 
 
 \section*{Futuras líneas de investigación}
-Uf
+
+Relleno.
 
 
 
