--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,6 +22,8 @@
 \usepackage{xspace}
 \usepackage{multicol}
 \usepackage{balance}
+
+\usepackage{longtable}
 %\usepackage{hyperref}
 %\hypersetup{urlcolor=black, colorlinks=true}  % Colours hyperlinks in blue, but this can be distracting if there are many links.
 \citestyle{aa}
@@ -92,7 +94,7 @@
 	    Doctoral del interesado.}
 
 	  \vspace{2.5cm}
-	  \large{En Santander, a 11 de Julio de 2018}\par % \\ \\ \\
+	  \large{En Santander, a 11 de Septiembre de 2058}\par % \\ \\ \\
           \bigskip
           \bigskip
           \bigskip
@@ -104,7 +106,7 @@
 
 % Begin the Dedication page
 \pagestyle{empty}  % Page style needs to be empty for this page
-\dedicatory{La dedicatoria apropiada.\ldots}
+\dedicatory{Ph'nglui mglw'nafh Cthulhu R'lyeh wgah'nagl fhtagn\ldots}
 
 \addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
 %% ----------------------------------------------------------------
@@ -155,7 +157,7 @@ Lord Voldemort \\
 is that they are often not true.''}\par
 \smallskip
 Abraham Lincoln
-\end{flushright}s
+\end{flushright}
 
 \vfill\vfill\vfill\vfill\vfill\vfill\null
 \clearpage  % Funny Quote page ended, start a new page
