--- a/agradecimientos.tex
+++ b/agradecimientos.tex
@@ -1,6 +1,51 @@
 % Agradecimientos
 
-Agradecimientos
+Déjame que pose para ti
+eres tú mi artista preferida
+déjame tenerte junto a mí
+prometo estarte agradecido
+prometo estarte agradecido.
+Si fuera yo capaz de conseguir
+tenerte alguna vez entretenida
+hacerte por lo menos sonreir
+prometo estarte agradecido
+prometo estarte agradecido.
 
+No te lo pienses más
+baja la guardia y mira atrás
+nadie te va a alcanzar
+no tienes rival
+no tienes rival.
+
+Me paso el tiempo viéndote venir
+y pasas a mi lado distraída
+si dejas que camine tras de ti
+prometo estarte agradecido
+prometo estarte agradecido.
+
+Te tengo tantas cosas que decir
+y tú como si no fuera contigo
+la historia se repite y aún así
+prometo estarte agradecido
+prometo estarte agradecido.
+
+No te lo pienses más
+baja la guardia y mira atrás
+nadie te va a alcanzar
+no tienes rival
+no tienes rival.
+
+No te lo pienses más
+baja la guardia y mira atrás
+nadie te va a alcanzar
+no tienes rival
+no tienes rival.
+
+Déjame que pose para ti
+eres tú mi artista preferida
+déjame tenerte junto a mí
+prometo estarte agradecido
+prometo estarte agradecido
+prometo estarte agradecido.
 
  
